fixed ie z-index

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1771,9 +1771,9 @@ a.plain {
   
 #preloader {
     opacity: 0;
-    transition: opacity 1.8s ease-in-out;
+    transition: opacity .8s ease-in-out;
     -webkit-transition: opacity .8s ease-in-out;
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -1828,5 +1828,5 @@ background:#f1c40f;
 }
 nvlabs-app:empty + #preloader {
     opacity: 1;
-    z-index: 100;
+    z-index: -1;
 }
